Fixed navbar logo looking odd on smaller devices

--- a/src/component/Navbar.scss
+++ b/src/component/Navbar.scss
@@ -40,6 +40,7 @@
 
     .logo img{
       max-width: 100%;
+      width: auto;
       height: 4vw;
     }
   }
